objects/Perceived_Stress_Scale__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Perceived_Stress_Scales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_angered__c</fullName>
        <description>In the last month, how often have you been angered because of things that were outside of your control?</description>
        <label>STRESS_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_confident__c</fullName>
        <description>In the last month, how often have you felt confident about your ability to handle your personal problems</description>
        <label>STRESS_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_control__c</fullName>
        <description>In the last month, how often have you been able to control irritations in your life?</description>
        <label>STRESS_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_cope__c</fullName>
        <description>In the last month, how often have you found that you could not cope with all the things that you had to do?</description>
        <label>STRESS_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_have_felt__c</fullName>
        <description>In the last month, how often have you felt that you were unable to control the important things in your life?</description>
        <label>STRESS_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_have_you__c</fullName>
        <description>In the last month, how often have you been upset because of something that happened unexpectedly?</description>
        <label>STRESS_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_nervous__c</fullName>
        <label>STRESS_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_overcome__c</fullName>
        <description>In the last month, how often have you felt difficulties were piling up so high that you could not overcome them?</description>
        <label>STRESS_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_things__c</fullName>
        <description>In the last month, how often have you felt that things were going your way?</description>
        <label>STRESS_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_the_last_month_how_often_top__c</fullName>
        <description>In the last month, how often have you felt that you were on top of things?</description>
        <label>STRESS_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>STRESS</label>
    <nameField>
        <displayFormat>STRESS-{0000000000}</displayFormat>
        <label>STRESS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STRESSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>